--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 		"autoAudits": false,
 		"showShadowRootInWxmlPanel": true,
 		"scopeDataCheck": false,
-		"uglifyFileName": false,
+		"uglifyFileName": true,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
@@ -50,7 +50,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.19.6",
-	"appid": "wx5bbb7bc983c50b3d",
+	"appid": "wx0c59da367140e41b",
 	"projectname": "self-discipline-tree-hole",
 	"condition": {},
 	"editorSetting": {
